--- a/resources/views/partials/header.edge
+++ b/resources/views/partials/header.edge
@@ -9,51 +9,16 @@
         </div>
         <i class="menu-toggle fas fa-bars d-xs-block d-sm-block d-md-none"></i>
         <div class="mobile-menu col-xl-11 col-lg-11 col-md-11 d-none d-md-block d-lg-block">
-          <ul class="crypt-heading-menu float-left">
+          <ul class="crypt-heading-menu float-right">
             <li class="crypt-heading-menu-icon crypt-heading-menu-toggle">
               <a href="javascript:;"><i class="heading-menu-toggle-icon fas fa-globe"></i></a>
               <div class="crypt-nav-tab">
                 <ul>
-                  <li><a href="#"><img src="./theme/images/flags/united-states.png"><span>English</span></a></li>
-                  <li><a href="#"><img src="./theme/images/flags/spain.png"><span>Spanish</span></a></li>
-                  <li><a href="#"><img src="./theme/images/flags/germany.png"><span>German</span></a></li>
-                  <li><a href="#"><img src="./theme/images/flags/france.png"><span>French</span></a></li>
-                  <li><a href="#"><img src="./theme/images/flags/japan.png"><span>Japanese</span></a></li>
+                  <li><a href="#"><img src="./theme/images/flags/vi.png"><span>VietNam</span></a></li>
+                  <li><a href="#"><img src="./theme/images/flags/en.png"><span>English</span></a></li>
                 </ul>
               </div>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                markets
-              </a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="markets.html">Markets</a>
-                <a class="dropdown-item" href="markets-line.html">Markets Line</a>
-              </div>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                finance
-              </a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="technical-analysis.html">Technical Analysis</a>
-                <a class="dropdown-item" href="economic-calendar.html">Economic Calendar</a>
-                <a class="dropdown-item" href="screener.html">Screener</a>
-              </div>
-            </li>
-            <li><a href="buy-sell.html">buy-sell</a></li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                trade
-              </a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="trade.html">Trade Basic</a>
-                <a class="dropdown-item" href="trade2.html">Trade Edited</a>
-                <a class="dropdown-item" href="trade-full.html">Trade FullScreen</a>
-              </div>
-            </li>
-          </ul>
-          <ul class="crypt-heading-menu float-right">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 pages
@@ -67,10 +32,12 @@
               </div>
             </li>
             <li><a href="contact-us.html">contact us</a></li>
+            @if(!auth.isLoggedIn)
             <li class="crypt-box-menu"><a href="login.html">login</a></li>
             <li class="crypt-box-menu"><a href="register.html">
               <button>open an account</button>
             </a></li>
+            @endif
           </ul>
         </div>
       </div>
